[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/anima/ui/AnimationData.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 1010.0
margin_bottom = 28.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 25.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
text = "Animation type:"

[node name="AnimationTypeButton" type="OptionButton" parent="GridContainer"]
margin_left = 164.0
margin_right = 1010.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "Animation"
items = [ "Animation", null, false, 0, null, "Property", null, false, 1, null ]
selected = 0

[node name="AnimationContainer" type="GridContainer" parent="."]
margin_top = 32.0
margin_right = 1010.0
margin_bottom = 60.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationLabel" type="Label" parent="AnimationContainer"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 25.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
text = "Animation:"

[node name="AnimationButton" type="Button" parent="AnimationContainer"]
margin_left = 164.0
margin_right = 1010.0
margin_bottom = 28.0
hint_tooltip = "Click here to select/change animation"
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Select animation..."

[node name="PropertyContainer" type="GridContainer" parent="."]
margin_top = 64.0
margin_right = 1010.0
margin_bottom = 172.0
columns = 2

[node name="PropertyLabel" type="Label" parent="PropertyContainer"]
margin_top = 3.0
margin_right = 160.0
margin_bottom = 25.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
text = "Property:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PropertyButton" type="Button" parent="PropertyContainer"]
margin_left = 164.0
margin_right = 1010.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Select property to animate..."

[node name="HSeparator" type="HSeparator" parent="PropertyContainer"]
margin_top = 32.0
margin_right = 160.0
margin_bottom = 36.0

[node name="HSeparator2" type="HSeparator" parent="PropertyContainer"]
margin_left = 164.0
margin_top = 32.0
margin_right = 1010.0
margin_bottom = 36.0

[node name="From" type="Label" parent="PropertyContainer"]
margin_top = 45.0
margin_right = 160.0
margin_bottom = 67.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
text = "From:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="From2" type="LineEdit" parent="PropertyContainer"]
margin_left = 164.0
margin_top = 40.0
margin_right = 1010.0
margin_bottom = 72.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
text = "Property:"

[node name="To" type="Label" parent="PropertyContainer"]
margin_top = 81.0
margin_right = 160.0
margin_bottom = 103.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
text = "To:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="From3" type="LineEdit" parent="PropertyContainer"]
margin_left = 164.0
margin_top = 76.0
margin_right = 1010.0
margin_bottom = 108.0
rect_min_size = Vector2( 160, 0 )
custom_fonts/font = SubResource( 1 )
text = "Property:"
